# Piece-Table

./: CMakeLists.txt  LICENSE  PieceTable.cpp  PieceTable.h  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
include/: PieceTable.h
src/: PieceTable.cpp  main.cpp
tests/: test.cpp
